--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "better-react-spinkit": "^2.0.4",
+    "email-validator": "^2.0.4",
     "firebase": "^8.3.1",
     "firebase-tools": "^9.8.0",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.3",
     "styled-components": "^5.2.1"
   }
 }
