--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "email-validator": "^2.0.4",
     "firebase": "^8.5.0",
     "firebase-tools": "^9.8.0",
+    "moment": "^2.29.1",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "timeago-react": "^3.0.2"
   }
 }
